Made Generic extension methods, Fixed OpenCV tables, Fixed Fits import, Added Fits to demo,

--- a/Gstc.Imaging.Demo/Gstc.Imaging.Demo.csproj
+++ b/Gstc.Imaging.Demo/Gstc.Imaging.Demo.csproj
@@ -70,12 +70,19 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="FitsControl.xaml.cs">
+      <DependentUpon>FitsControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="OpenCvTest.xaml.cs">
       <DependentUpon>OpenCvTest.xaml</DependentUpon>
     </Compile>
     <Compile Include="WriteableBitmapTest.xaml.cs">
       <DependentUpon>WriteableBitmapTest.xaml</DependentUpon>
     </Compile>
+    <Page Include="FitsControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="InteropGdi.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -123,6 +130,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <Content Include="Images\FOCx38i0101t_c0f.fits">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
