--- a/Gstc.Imaging/Gstc.Imaging.csproj
+++ b/Gstc.Imaging/Gstc.Imaging.csproj
@@ -44,7 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions\ExtUtil.cs" />
-    <Compile Include="Extensions\ImageFormat.cs" />
+    <Compile Include="ImageFormat.cs" />
     <Compile Include="IpcImage.cs" />
     <Compile Include="IpcImageFileMapped.cs" />
     <Compile Include="Extensions\NativeMethods.cs" />
