Added pixel format look up.

--- a/Gstc.Imaging.Demo/Gstc.Imaging.Demo.csproj
+++ b/Gstc.Imaging.Demo/Gstc.Imaging.Demo.csproj
@@ -130,9 +130,12 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Content Include="Images\FOCx38i0101t_c0f.fits">
+    <None Include="Images\FOCx38i0101t_c0f.fits">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    </None>
+    <None Include="Images\WFPC2u5780205r_c0fx.fits">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
