--- a/Gstc.Imaging.Fits.UnitTest/Gstc.Imaging.Fits.UnitTest.csproj
+++ b/Gstc.Imaging.Fits.UnitTest/Gstc.Imaging.Fits.UnitTest.csproj
@@ -53,9 +53,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Images\FOCx38i0101t_c0f.fits">
+    <None Include="Images\FOCx38i0101t_c0f.fits">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    </None>
+    <None Include="Images\WFPC2u5780205r_c0fx.fits">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
