--- a/Gstc.Imaging.Fits/Gstc.Imaging.Fits.csproj
+++ b/Gstc.Imaging.Fits/Gstc.Imaging.Fits.csproj
@@ -71,6 +71,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FitsData.Diagnostics.cs" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
