--- a/Gtsc.Imaging.Net.UnitTest/Gtsc.Imaging.Net.UnitTest.csproj
+++ b/Gtsc.Imaging.Net.UnitTest/Gtsc.Imaging.Net.UnitTest.csproj
@@ -37,6 +37,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.VisualStudio.TestPlatform.TestFramework, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
@@ -52,7 +53,6 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Images\ImageUris.cs" />
     <Compile Include="TestBitmapSource.cs" />
     <Compile Include="TestGdi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -65,27 +65,14 @@
       <Project>{8326DBA5-524C-46D3-8F4A-A5CC431AF587}</Project>
       <Name>Gstc.Imaging.Net</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Gstc.Imaging.UnitTest.Images\Gstc.Imaging.UnitTest.Images.csproj">
+      <Project>{5C902526-9848-4D8C-8E52-630B52F6849E}</Project>
+      <Name>Gstc.Imaging.UnitTest.Images</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Gstc.Imaging\Gstc.Imaging.csproj">
       <Project>{EDD957B9-9E02-464F-810A-C8A09AB2D03A}</Project>
       <Name>Gstc.Imaging</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Images\2048x2048.bmp">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Images\TestImageIndex8.gif">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Images\TestPatternBGR24.bmp">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Images\TestPatternBGR32.bmp">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Images\TestPatternGrayscale8bpp.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
